z-index fixes

--- a/RIDS/src/app/place/place.component.scss
+++ b/RIDS/src/app/place/place.component.scss
@@ -29,7 +29,7 @@ $graysquarec: #D8D8D8;
     @include flex(column,center,center);
     .top-sec {
         @include flex(column,center,center);
-
+        z-index: 0;
         @media only screen and (max-width:600px) {
             @include flex(column,center,center);
             margin: 0;
@@ -89,7 +89,7 @@ $graysquarec: #D8D8D8;
                 width: 100%;
                 grid-row: 1/ span 4;
                 grid-column: 1/ span 3;
-                z-index: -1;
+                z-index: 0;
                 margin-top: 0px;
             }
             .tab-stuff {
@@ -163,7 +163,7 @@ $graysquarec: #D8D8D8;
                 img {
                     height: 50vh;
                     align-self: flex-start;
-                    z-index: -1;
+                    z-index: 0;
                     @media only screen and (max-width: 950px){
                         align-self: center;
                         width: 100%;
