--- a/RIDS/src/app/suspect/suspect.component.scss
+++ b/RIDS/src/app/suspect/suspect.component.scss
@@ -27,6 +27,7 @@ $graysquarec: #D8D8D8;
     @include flex(column,center,space-between);
     .top-sec {
         @include flex(column,center,center);
+        z-index: 0;
         @media screen and (max-width:600px) {
             @include flex(column,center,center);
             margin: 0;
@@ -86,7 +87,7 @@ $graysquarec: #D8D8D8;
                 width: 100%;
                 grid-row: 1/ span 4;
                 grid-column: 1/ span 3;
-                z-index: -1;
+                z-index: 0;
                 margin-top: 0px;
 
             }
